--- a/.qoder/repowiki/zh/content/配置管理.md
+++ b/.qoder/repowiki/zh/content/配置管理.md
@@ -17,7 +17,17 @@
 - [ProcessProtector/App.config](file://ProcessProtector/App.config)
 - [IISMonitor.v1/Properties/Settings.settings](file://IISMonitor.v1/Properties/Settings.settings)
 - [IISMonitor.v2/Properties/Settings.settings](file://IISMonitor.v2/Properties/Settings.settings)
+- [IISMonitor.v1/packages.config](file://IISMonitor.v1/packages.config)
+- [IISMonitor.v2/packages.config](file://IISMonitor.v2/packages.config)
+- [IISMonitor.v1/IISMonitor.v1.csproj](file://IISMonitor.v1/IISMonitor.v1.csproj)
+- [IISMonitor.v2/IISMonitor.v2.csproj](file://IISMonitor.v2/IISMonitor.v2.csproj)
 </cite>
+
+## 更新摘要
+**所做更改**
+- 更新了NLog库版本信息，从6.0.7升级到6.1.0
+- 新增了NLog版本兼容性说明和配置注意事项
+- 补充了NLog 6.1.0版本的功能特性和配置差异说明
 
 ## 目录
 1. [简介](#简介)
@@ -41,6 +51,8 @@
 - 生产环境最佳实践与安全注意事项
 - 管理员配置变更操作指南
 
+**更新** NLog库已从6.0.7升级到6.1.0版本，提供了更好的性能和稳定性改进。
+
 ## 项目结构
 IISMonitor 由多个子项目组成，每个子项目通常包含独立的 App.config 与 NLog.config；部署工具 Deployer 还包含 deployconfig.json 用于发布流程的目录与命名约定配置。
 
@@ -58,11 +70,13 @@ subgraph "监控 v1"
 V1AppCfg["IISMonitor.v1/App.config"]
 V1NLog["IISMonitor.v1/NLog.config"]
 V1Set["IISMonitor.v1/Properties/Settings.settings"]
+V1NLogVer["NLog 6.1.0"]
 end
 subgraph "监控 v2"
 V2AppCfg["IISMonitor.v2/App.config"]
 V2NLog["IISMonitor.v2/NLog.config"]
 V2Set["IISMonitor.v2/Properties/Settings.settings"]
+V2NLogVer["NLog 6.1.0"]
 end
 subgraph "进程保护 ProcessProtector"
 PAppCfg["ProcessProtector/App.config"]
@@ -79,10 +93,12 @@ DAppCfg -.-> DAppSet
 DAppCfg -.-> DConn
 V1AppCfg -.-> V1NLog
 V2AppCfg -.-> V2NLog
+V1NLog -.-> V1NLogVer
+V2NLog -.-> V2NLogVer
 WCM --> APM
 ```
 
-图表来源
+**图表来源**
 - [Deployer/App.config](file://Deployer/App.config#L1-L30)
 - [Deployer/deployconfig.json](file://Deployer/deployconfig.json#L1-L8)
 - [Deployer/Modules/AppSettingModule.cs](file://Deployer/Modules/AppSettingModule.cs#L1-L246)
@@ -96,7 +112,7 @@ WCM --> APM
 - [iHawkIISLibrary/WebConfigManager.cs](file://iHawkIISLibrary/WebConfigManager.cs#L1-L157)
 - [iHawkIISLibrary/ApplicationPoolsManager.cs](file://iHawkIISLibrary/ApplicationPoolsManager.cs#L1-L143)
 
-章节来源
+**章节来源**
 - [Deployer/App.config](file://Deployer/App.config#L1-L30)
 - [IISMonitor.v1/App.config](file://IISMonitor.v1/App.config#L1-L15)
 - [IISMonitor.v2/App.config](file://IISMonitor.v2/App.config#L1-L6)
@@ -109,18 +125,19 @@ WCM --> APM
 - NLog.config（日志框架配置）
   - 作用：定义日志目标（targets）与规则（rules），控制日志级别与输出位置。
   - 建议：按模块划分不同日志文件，便于定位问题。
+  - **更新** NLog 6.1.0版本提供了更好的性能优化和稳定性改进。
 - deployconfig.json（部署流程配置）
   - 作用：定义发布包目录、解压目录、应用程序池命名前后缀及 .NET 标识文件名。
   - 建议：统一命名规范，避免与现有应用池冲突。
 
-章节来源
+**章节来源**
 - [Deployer/App.config](file://Deployer/App.config#L1-L30)
 - [IISMonitor.v1/NLog.config](file://IISMonitor.v1/NLog.config#L1-L56)
 - [IISMonitor.v2/NLog.config](file://IISMonitor.v2/NLog.config#L1-L47)
 - [Deployer/deployconfig.json](file://Deployer/deployconfig.json#L1-L8)
 
 ## 架构总览
-下图展示“配置读取/写入”在各组件中的交互路径，包括应用设置、连接字符串与日志配置。
+下图展示"配置读取/写入"在各组件中的交互路径，包括应用设置、连接字符串与日志配置。
 
 ```mermaid
 sequenceDiagram
@@ -142,7 +159,7 @@ WCM-->>UI : "结果状态"
 Note over NLog : "根据 NLog.config 的规则输出到对应文件"
 ```
 
-图表来源
+**图表来源**
 - [Deployer/Modules/AppSettingModule.cs](file://Deployer/Modules/AppSettingModule.cs#L96-L151)
 - [Deployer/Modules/ConnectionStringModule.cs](file://Deployer/Modules/ConnectionStringModule.cs#L59-L102)
 - [Deployer/ConnectionStringsForm.cs](file://Deployer/ConnectionStringsForm.cs#L27-L40)
@@ -158,7 +175,7 @@ Note over NLog : "根据 NLog.config 的规则输出到对应文件"
 - 典型场景
   - SharpZipLib、System.Buffers、System.Memory、System.Runtime.CompilerServices.Unsafe、Newtonsoft.Json 等库的版本冲突处理。
 
-章节来源
+**章节来源**
 - [Deployer/App.config](file://Deployer/App.config#L1-L30)
 - [IISMonitor.v1/App.config](file://IISMonitor.v1/App.config#L1-L15)
 
@@ -173,8 +190,13 @@ Note over NLog : "根据 NLog.config 的规则输出到对应文件"
 - 建议
   - 在生产环境启用自动重载与内部日志文件，便于诊断 NLog 自身问题。
   - 将日志目录设置为可写且有配额限制的路径，避免磁盘耗尽。
+- **更新** NLog 6.1.0版本特性
+  - 改进了异步日志记录性能
+  - 增强了配置文件解析的稳定性
+  - 优化了内存使用效率
+  - 提供了更好的错误处理机制
 
-章节来源
+**章节来源**
 - [IISMonitor.v1/NLog.config](file://IISMonitor.v1/NLog.config#L1-L56)
 - [IISMonitor.v2/NLog.config](file://IISMonitor.v2/NLog.config#L1-L47)
 
@@ -189,7 +211,7 @@ Note over NLog : "根据 NLog.config 的规则输出到对应文件"
 - 建议
   - 为不同环境（开发/测试/生产）准备独立的 deployconfig.json，或通过构建脚本注入。
 
-章节来源
+**章节来源**
 - [Deployer/deployconfig.json](file://Deployer/deployconfig.json#L1-L8)
 - [Deployer/DeployConfigItem.cs](file://Deployer/DeployConfigItem.cs#L1-L37)
 
@@ -220,11 +242,11 @@ WriteAppSettings --> Commit
 Commit --> Done(["结束"])
 ```
 
-图表来源
+**图表来源**
 - [Deployer/Modules/AppSettingModule.cs](file://Deployer/Modules/AppSettingModule.cs#L96-L151)
 - [iHawkIISLibrary/WebConfigManager.cs](file://iHawkIISLibrary/WebConfigManager.cs#L94-L152)
 
-章节来源
+**章节来源**
 - [Deployer/Modules/AppSettingModule.cs](file://Deployer/Modules/AppSettingModule.cs#L1-L246)
 - [iHawkIISLibrary/WebConfigManager.cs](file://iHawkIISLibrary/WebConfigManager.cs#L1-L157)
 
@@ -252,12 +274,12 @@ WCM-->>UI : "结果状态"
 end
 ```
 
-图表来源
+**图表来源**
 - [Deployer/Modules/ConnectionStringModule.cs](file://Deployer/Modules/ConnectionStringModule.cs#L104-L128)
 - [Deployer/ConnectionStringsForm.cs](file://Deployer/ConnectionStringsForm.cs#L27-L40)
 - [iHawkIISLibrary/WebConfigManager.cs](file://iHawkIISLibrary/WebConfigManager.cs#L68-L92)
 
-章节来源
+**章节来源**
 - [Deployer/Modules/ConnectionStringModule.cs](file://Deployer/Modules/ConnectionStringModule.cs#L1-L182)
 - [Deployer/ConnectionStringsForm.cs](file://Deployer/ConnectionStringsForm.cs#L1-L76)
 - [iHawkIISLibrary/WebConfigManager.cs](file://iHawkIISLibrary/WebConfigManager.cs#L1-L157)
@@ -270,13 +292,14 @@ end
 - 监测重启
   - 检测池状态，若停止则尝试重启并返回结果。
 
-章节来源
+**章节来源**
 - [iHawkIISLibrary/ApplicationPoolsManager.cs](file://iHawkIISLibrary/ApplicationPoolsManager.cs#L1-L143)
 
 ## 依赖关系分析
 - 部署工具 Deployer 依赖 iHawkIISLibrary 完成 IIS 配置读写。
 - NLog 配置独立于业务逻辑，但受运行目录与权限影响。
 - Settings.settings 仅作为默认配置占位，实际运行时行为主要由 App.config 与外部 JSON/NLog 文件决定。
+- **更新** 所有NLog相关组件现已统一升级到6.1.0版本。
 
 ```mermaid
 graph LR
@@ -286,9 +309,11 @@ DConnDlg["ConnectionStringsForm"] --> DConn
 DJson["deployconfig.json"] --> DItem["DeployConfigItem"]
 V1NLog["v1/NLog.config"] --> Logs["日志输出"]
 V2NLog["v2/NLog.config"] --> Logs
+V1NLogVer["NLog 6.1.0"] --> V1NLog
+V2NLogVer["NLog 6.1.0"] --> V2NLog
 ```
 
-图表来源
+**图表来源**
 - [Deployer/Modules/AppSettingModule.cs](file://Deployer/Modules/AppSettingModule.cs#L1-L246)
 - [Deployer/Modules/ConnectionStringModule.cs](file://Deployer/Modules/ConnectionStringModule.cs#L1-L182)
 - [Deployer/ConnectionStringsForm.cs](file://Deployer/ConnectionStringsForm.cs#L1-L76)
@@ -300,12 +325,11 @@ V2NLog["v2/NLog.config"] --> Logs
 - 日志性能
   - 使用文件目标时，建议启用自动重载与合适的内部日志级别，避免频繁 IO。
   - 按模块拆分日志文件，降低单文件过大带来的读写压力。
+  - **更新** NLog 6.1.0版本提供了更好的异步日志记录性能和内存使用效率。
 - 配置读写
   - 批量写入连接串时，尽量一次性提交（CommitChanges），减少多次提交开销。
 - 版本兼容
   - 通过 App.config 的 bindingRedirect 保持第三方库版本一致，避免运行时反射失败。
-
-[本节为通用指导，无需列出章节来源]
 
 ## 故障排查指南
 - 无法读取 appSettings
@@ -320,8 +344,11 @@ V2NLog["v2/NLog.config"] --> Logs
 - 应用程序池无法启动/状态异常
   - 使用 ApplicationPoolsManager 检查状态并尝试重启。
   - 参考：[ApplicationPoolsManager.CheckAndRestart](file://iHawkIISLibrary/ApplicationPoolsManager.cs#L127-L138)
+- **新增** NLog 6.1.0相关问题
+  - 如果遇到配置文件解析错误，检查NLog.config语法是否符合6.1.0版本要求。
+  - 确认内部日志功能正常工作，以便诊断配置问题。
 
-章节来源
+**章节来源**
 - [Deployer/Modules/AppSettingModule.cs](file://Deployer/Modules/AppSettingModule.cs#L96-L151)
 - [iHawkIISLibrary/WebConfigManager.cs](file://iHawkIISLibrary/WebConfigManager.cs#L128-L152)
 - [IISMonitor.v1/NLog.config](file://IISMonitor.v1/NLog.config#L40-L54)
@@ -332,9 +359,8 @@ V2NLog["v2/NLog.config"] --> Logs
 - App.config 与 NLog.config 是 IISMonitor 的两大基础配置载体，前者保证运行时稳定，后者保障可观测性。
 - deployconfig.json 为部署流程提供标准化的目录与命名约定，建议结合环境差异化管理。
 - 通过 WebConfigManager 与 ApplicationPoolsManager 实现对 IIS 配置与池状态的集中管控。
+- **更新** NLog 6.1.0版本提供了更好的性能和稳定性，建议在生产环境中使用最新版本。
 - 建议在生产环境采用严格的日志分级、权限最小化与配置版本化管理，确保可审计与可回滚。
-
-[本节为总结，无需列出章节来源]
 
 ## 附录
 
@@ -344,8 +370,6 @@ V2NLog["v2/NLog.config"] --> Logs
 - 建议
   - 使用环境变量控制日志根目录与敏感连接串（通过外部密钥管理服务注入），并在启动前进行校验。
 
-[本节为通用指导，无需列出章节来源]
-
 ### 日志级别与输出目标配置指南
 - 级别映射
   - Info/Warn/Error 分别对应不同输出文件，便于按严重程度检索。
@@ -353,18 +377,19 @@ V2NLog["v2/NLog.config"] --> Logs
   - 基于 ${basedir} 与 ${shortdate} 的文件名模板，建议将日志目录设置为可写且具备轮转策略的路径。
 - 规则匹配
   - v1 通过类名精确匹配，v2 使用通配符匹配所有模块。
+- **更新** NLog 6.1.0版本支持更灵活的日志级别配置和更好的性能表现。
 
-章节来源
+**章节来源**
 - [IISMonitor.v1/NLog.config](file://IISMonitor.v1/NLog.config#L47-L53)
 - [IISMonitor.v2/NLog.config](file://IISMonitor.v2/NLog.config#L43-L45)
 
 ### 连接字符串设置步骤
 - 选择虚拟路径（可多选）
 - 打开连接串编辑对话框，输入键值对
-- 点击“批量设置”，系统逐项写入并提交
+- 点击"批量设置"，系统逐项写入并提交
 - 查看输出窗口确认结果
 
-章节来源
+**章节来源**
 - [Deployer/Modules/ConnectionStringModule.cs](file://Deployer/Modules/ConnectionStringModule.cs#L104-L128)
 - [Deployer/ConnectionStringsForm.cs](file://Deployer/ConnectionStringsForm.cs#L27-L40)
 
@@ -379,24 +404,32 @@ V2NLog["v2/NLog.config"] --> Logs
   - 运行时版本与 SKU 固定，bindingRedirect 用于解决依赖冲突
 - Settings.settings
   - 为空占位，实际行为由其他配置文件决定
+- **更新** NLog版本信息
+  - v1项目：NLog 6.1.0（net472）
+  - v2项目：NLog 6.1.0（net46）
 
-章节来源
+**章节来源**
 - [Deployer/deployconfig.json](file://Deployer/deployconfig.json#L1-L8)
 - [Deployer/App.config](file://Deployer/App.config#L1-L30)
 - [IISMonitor.v1/Properties/Settings.settings](file://IISMonitor.v1/Properties/Settings.settings#L1-L8)
 - [IISMonitor.v2/Properties/Settings.settings](file://IISMonitor.v2/Properties/Settings.settings#L1-L8)
+- [IISMonitor.v1/packages.config](file://IISMonitor.v1/packages.config#L1-L5)
+- [IISMonitor.v2/packages.config](file://IISMonitor.v2/packages.config#L1-L4)
 
 ### 常见配置错误与排除
 - JSON 写入失败
   - 确认输入为合法 JSON；否则回退为键值对写入。
 - 无默认网站
-  - 界面提示“默认网站不存在”，请先创建或切换站点。
+  - 界面提示"默认网站不存在"，请先创建或切换站点。
 - 权限不足
   - 写入 web.config 或 appsettings.json 需要相应权限；检查 IIS_IUSRS 或应用池标识账户权限。
 - 日志目录不可写
   - 确保日志目录存在且进程具有写权限；必要时调整 NLog.config 中的输出路径。
+- **新增** NLog 6.1.0版本兼容性问题
+  - 确保项目目标框架与NLog 6.1.0兼容（net46/net472）。
+  - 检查项目引用的NLog版本是否正确指向6.1.0。
 
-章节来源
+**章节来源**
 - [Deployer/Modules/AppSettingModule.cs](file://Deployer/Modules/AppSettingModule.cs#L49-L54)
 - [iHawkIISLibrary/WebConfigManager.cs](file://iHawkIISLibrary/WebConfigManager.cs#L115-L126)
 - [IISMonitor.v1/NLog.config](file://IISMonitor.v1/NLog.config#L31-L37)
@@ -409,12 +442,11 @@ V2NLog["v2/NLog.config"] --> Logs
   - 不在配置文件中存储明文敏感信息；通过外部密钥管理或环境变量注入。
 - 日志与审计
   - 启用内部日志与自动重载；对日志文件实施轮转与保留策略。
+  - **更新** 使用NLog 6.1.0版本获得更好的日志性能和稳定性。
 - 版本与兼容性
   - 通过 bindingRedirect 管理第三方库版本；升级前进行回归测试。
 - 配置版本化
   - 将 deployconfig.json 与 NLog.config 纳入版本控制，区分环境分支或使用模板替换。
-
-[本节为通用指导，无需列出章节来源]
 
 ### 管理员配置变更指南
 - 步骤总览
@@ -427,5 +459,4 @@ V2NLog["v2/NLog.config"] --> Logs
 - 注意事项
   - 批量写入前先预览目标路径，避免误改生产环境。
   - 在低峰期执行变更，并做好回滚预案。
-
-[本节为通用指导，无需列出章节来源]
+  - **更新** 升级NLog到6.1.0版本时，确保所有项目都使用相同版本以避免冲突。
